--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -40,4 +40,14 @@
         <item>250</item>
     </string-array>
 
+    <string-array name="measure">
+        <item>Kilometers</item>
+        <item>Miles</item>
+    </string-array>
+
+    <string-array name="measure_values">
+        <item>km</item>
+        <item>miles</item>
+    </string-array>
+
 </resources>
