--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -1,5 +1,5 @@
-<PreferenceScreen
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android"
     app:iconSpaceReserved="false">
 
     <PreferenceCategory
@@ -7,8 +7,18 @@
         app:iconSpaceReserved="false">
 
         <EditTextPreference
+            app:defaultValue="@string/unknown_user"
             app:key="@string/username_key"
             app:title="@string/username_title"
+            app:useSimpleSummaryProvider="true"
+            app:iconSpaceReserved="false"/>
+
+        <ListPreference
+            app:defaultValue="km"
+            app:entries="@array/measure"
+            app:entryValues="@array/measure_values"
+            app:key="@string/measure_key"
+            app:title="@string/measure_title"
             app:useSimpleSummaryProvider="true"
             app:iconSpaceReserved="false"/>
 
@@ -18,17 +28,23 @@
         app:title="Localisation"
         app:iconSpaceReserved="false">
 
+        <SwitchPreference
+            android:defaultValue="true"
+            android:key="@string/localisation_automatic_key"
+            android:title="@string/localisation_automatic_title"
+            app:iconSpaceReserved="false"/>
+
         <ListPreference
-            app:defaultValue="network"
+            app:defaultValue="@string/localisation_providers_default"
             app:entries="@array/localisation_providers"
             app:entryValues="@array/localisation_providers_values"
             app:key="@string/localisation_provider_key"
             app:title="@string/localisation_provider_title"
             app:useSimpleSummaryProvider="true"
-            app:iconSpaceReserved="false"/>
+            app:iconSpaceReserved="false" />
 
         <ListPreference
-            app:defaultValue="5000"
+            app:defaultValue="@string/localisation_update_time_frequency_default"
             app:entries="@array/localisation_update_time_frequency"
             app:entryValues="@array/localisation_update_time_frequency_values"
             app:key="@string/localisation_update_time_frequency_key"
@@ -37,7 +53,7 @@
             app:iconSpaceReserved="false"/>
 
         <ListPreference
-            app:defaultValue="10"
+            app:defaultValue="@string/localisation_update_distance_frequency_default"
             app:entries="@array/localisation_update_distance_frequency"
             app:entryValues="@array/localisation_update_distance_frequency_values"
             app:key="@string/localisation_update_distance_frequency_key"
