--- a/app/src/main/res/layout/item_track.xml
+++ b/app/src/main/res/layout/item_track.xml
@@ -47,8 +47,8 @@
                 android:id="@+id/waypoints"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintStart_toStartOf="@id/time"
-                app:layout_constraintTop_toBottomOf="@id/time"
+                app:layout_constraintStart_toStartOf="@id/duration"
+                app:layout_constraintTop_toBottomOf="@id/duration"
                 android:text="%s points"/>
 
 
