--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <declare-styleable name="Altimeter">
+    <declare-styleable name="AltimeterView">
         <attr name="backgroundColor" format="color"/>
         <attr name="showMarker" format="boolean"/>
         <attr name="markerColor" format="color"/>
@@ -9,5 +9,7 @@
         <attr name="textSize" format="dimension"/>
         <attr name="meters" format="integer"/>
         <attr name="rangeMeters" format="integer"/>
+        <attr name="minAltitudeValue" format="float"/>
+        <attr name="maxAltitudeValue" format="float"/>
     </declare-styleable>
 </resources>
