--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -46,7 +46,7 @@
     </string-array>
 
     <string-array name="measure_values">
-        <item>km</item>
+        <item>kilometers</item>
         <item>miles</item>
     </string-array>
 
