--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -7,6 +7,37 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragment.HistoryFragment">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/fragment_history_empty_state"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="50dp">
+
+        <ImageView
+            android:id="@+id/empty_state_icon"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/ic_history_black_24dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <TextView
+            android:id="@+id/empty_state_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginHorizontal="50dp"
+            android:gravity="center"
+            android:textSize="20sp"
+            android:text="@string/no_recorded_track_found"
+            app:layout_constraintEnd_toEndOf="@+id/empty_state_icon"
+            app:layout_constraintStart_toStartOf="@+id/empty_state_icon"
+            app:layout_constraintTop_toBottomOf="@+id/empty_state_icon"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/history_recyclerview"
         android:layout_width="match_parent"
