--- a/app/src/main/res/drawable/button_danger.xml
+++ b/app/src/main/res/drawable/button_danger.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:state_pressed="true"
-        android:drawable="@drawable/bg_button" />
+        android:drawable="@drawable/bg_danger_button" />
     <item
         android:state_enabled="false"
-        android:drawable="@drawable/bg_button" />
+        android:drawable="@drawable/bg_danger_button" />
 </selector>
