--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -8,6 +8,8 @@
         <attr name="lineColor" format="color"/>
         <attr name="textColor" format="color"/>
         <attr name="textSize" format="dimension"/>
+        <attr name="strokeColor" format="color"/>
+        <attr name="strokeValue" format="float"/>
     </declare-styleable>
 
     <declare-styleable name="CompassView" parent="Application">
@@ -20,5 +22,12 @@
         <attr name="rangeMeters" format="integer"/>
         <attr name="minAltitudeValue" format="float"/>
         <attr name="maxAltitudeValue" format="float"/>
+    </declare-styleable>
+
+    <declare-styleable name="MapLegendView" parent="Application">
+
+        <attr name="minValue" format="float"/>
+        <attr name="maxValue" format="float"/>
+        <attr name="interval" format="integer"/>
     </declare-styleable>
 </resources>
