--- a/app/src/main/res/menu/menu_item_track.xml
+++ b/app/src/main/res/menu/menu_item_track.xml
@@ -9,7 +9,7 @@
     <item
         android:id="@+id/item_track_edit"
         android:icon="@drawable/ic_edit_black_24dp"
-        android:title="@string/edit" />
+        android:title="@string/rename" />
 
     <item
         android:id="@+id/item_track_delete"
